--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ HIDE_USER_API_KEY=
 # (optional)
 # Default: Empty
 # If you do not want users to use GPT-4, set this value to 1.
-DISABLE_GPT4=
+DISABLE_GPT4=1
 
 # (optional)
 # Default: Empty
