Update and rename .env to .env.local

--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 
 # Your openai api key. (required)
-OPENAI_API_KEY=sk-xxxx
+OPENAI_API_KEY=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
 
 # Access passsword, separated by comma. (optional)
-CODE=your-password
+CODE=gpt@9532
 
 # You can start service behind a proxy
 PROXY_URL=http://localhost:7890
