--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 
 # Your openai api key. (required)
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 
 # Access passsword, separated by comma. (optional)
 CODE=gpt@9532
